tests/snapshots/examples_fixtures/aoc__2025__aoc_day11_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day11_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `paths_to`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:60:13
   |
60 |     let r = paths_to(str_at(outs, i), graph, memo, end_node)
   |             ^^^^^^^^

Hint:
  Define it first: let paths_to = ...;


error[E004]: Undefined Variable

I can't find a value named `paths_to2`.

  examples/aoc/2025/aoc_day11_haskell_style.flx:103:13
    |
103 |     let r = paths_to2(str_at(outs, i), seen_dac, seen_fft, graph, memo)
    |             ^^^^^^^^^

Hint:
  Define it first: let paths_to2 = ...;

Help:
  Did you mean `paths_to`?

Found 2 errors.
== stdout ==
<not executed>
